<resources>
<string name="status_bar_notification_info_overflow">999+</string>
<string name="about_menu">About</string>
<string name="about_text" formatted="false">OpenVPN Connect %s (build %d)</string>
<string name="add_proxy">Add Proxy</string>
<string name="add_routes">OpenVPN: Adding routes</string>
<string name="add_shortcut_app">Add App Shortcut</string>
<string name="add_shortcut_connect">Add Connect Shortcut</string>
<string name="add_shortcut_disconnect">Add Disconnect Shortcut</string>
<string name="add_shortcut_help_text">Create a Connect shortcut for a given profile on your home page. When you touch the shortcut, the profile will automatically connect.</string>
<string name="add_shortcut_menu">Add Shortcut</string>
<string name="advanced_menu">Advanced</string>
<string name="alt_proxy_summary">Enable Private Tunnel proxy (for Private Tunnel profiles only)</string>
<string name="alt_proxy_title">Private Tunnel Proxy</string>
<string name="app">Openvpn Connect</string>
<string name="app_shortcut_title">OpenVPN Connect</string>
<string name="apprate_dismiss">No thanks</string>
<string name="apprate_message">If you enjoy using %s, please take a moment to rate it. Thanks for your support!</string>
<string name="apprate_rate">Rate it!</string>
<string name="apprate_remind_later">Remind me later</string>
<string name="apprate_title">Rate %s</string>
<string name="ar_accept">Accept</string>
<string name="ar_cancel">Cancel</string>
<string name="ar_title">Profile available for import</string>
<string name="ar_warn_replace">Note: existing profile will be replaced</string>
<string name="assign_ip">OpenVPN: Assigning IP address</string>
<string name="auth">OpenVPN: Authenticating</string>
<string name="auth_failed">OpenVPN Authentication failed</string>
<string name="auto_keyboard_summary">Automatically raise/dismiss soft keyboard</string>
<string name="auto_keyboard_title">Auto Keyboard</string>
<string name="autologin_suffix">/autologin</string>
<string name="autostart_finish_on_connect_summary">When VPN connection is launched from a shortcut or automatically on reboot, and no user input is required to authenticate connection, minimize the app after VPN connects.</string>
<string name="autostart_finish_on_connect_title">Shortcut Minimize</string>
<string name="autostart_summary">If a VPN connection is active on device shutdown, try to reconnect it on reboot</string>
<string name="autostart_title">Reconnect on reboot</string>
<string name="beta_expire_warn">Note: This beta expires on %s</string>
<string name="bytes_in">Bytes in</string>
<string name="bytes_out">Bytes out</string>
<string name="cert_error_header_text">Certificate error:</string>
<string name="cert_profile_insecure_summary">Enable support for MD5 signatures of X509 certificates. Note that MD5 is broken and should not be used</string>
<string name="cert_profile_insecure_title">Use insecure algorithms</string>
<string name="cert_verify_fail">OpenVPN server certificate verification failed</string>
<string name="cert_warn_accept">Accept</string>
<string name="cert_warn_reject">Reject</string>
<string name="cert_warn_title">Accept Invalid Certificate?</string>
<string name="channel_description">OpenVPN notifications</string>
<string name="channel_name">OpenVPN</string>
<string name="client_halt">OpenVPN client was halted by server</string>
<string name="client_ip">Client IP</string>
<string name="client_restart">OpenVPN client was restarted by server</string>
<string name="common_name">Common name:</string>
<string name="compression_summary">Tunnel compression options</string>
<string name="compression_title">Compression</string>
<string name="config_file_parse_error">Error parsing OpenVPN configuration file</string>
<string name="conn_timeout_summary">How long should OpenVPN try to connect before giving up?</string>
<string name="conn_timeout_title">Connection Timeout</string>
<string name="connect">Connect</string>
<string name="connected">OpenVPN: Connected</string>
<string name="connecting">OpenVPN: Connecting...</string>
<string name="connection_timeout">OpenVPN Connection Timeout</string>
<string name="core_thread_abandoned">OpenVPN Disconnected (core thread detached)</string>
<string name="core_thread_active">OpenVPN: Starting</string>
<string name="core_thread_error">OpenVPN core error</string>
<string name="core_thread_inactive">OpenVPN: Stopping</string>
<string name="cr_cancel">Cancel</string>
<string name="cr_continue">Continue</string>
<string name="cr_error">Error rendering challenge/response</string>
<string name="cr_title">Server Challenge</string>
<string name="create_shortcut_cancel">Cancel</string>
<string name="create_shortcut_prompt">Profile shortcut name:</string>
<string name="create_shortcut_title">Create Connect Shortcut</string>
<string name="create_shortcut_yes">Create Shortcut</string>
<string name="creds_error">OpenVPN credentials error</string>
<string name="delete_profile_confirm_cancel">Cancel</string>
<string name="delete_profile_confirm_title">Confirm Delete Profile</string>
<string name="delete_profile_confirm_yes">Delete</string>
<string name="disconnect">Disconnect</string>
<string name="disconnect_shortcut_title">Disconnect</string>
<string name="disconnected">OpenVPN: Disconnected</string>
<string name="duration">Duration</string>
<string name="dynamic_challenge">OpenVPN Authentication Challenge</string>
<string name="enable_notifications_summary">Show notifications</string>
<string name="enable_notifications_title">Notifications</string>
<string name="epki_error">External PKI error</string>
<string name="epki_invalid_alias">Lost KeyChain association with profile certificate and private key. Please retry login.</string>
<string name="epki_missing_cert">Cannot obtain profile certificate from KeyChain</string>
<string name="exit_full">Exit All</string>
<string name="exit_partial">Exit</string>
<string name="expires_on">Expires on:</string>
<string name="file_dialog_cancel">Cancel</string>
<string name="file_dialog_cant_read_folder">Cannot read folder</string>
<string name="file_dialog_create">Save</string>
<string name="file_dialog_err">Error</string>
<string name="file_dialog_file_name">File name:</string>
<string name="file_dialog_location">Location</string>
<string name="file_dialog_new">New</string>
<string name="file_dialog_no_data">No Data</string>
<string name="file_dialog_select">Select</string>
<string name="file_read_error">Cannot read file</string>
<string name="file_too_large" formatted="false">file %s too large (cannot exceed %d bytes)</string>
<string name="fingerprints">Fingerprints:</string>
<string name="force_aes_cbc_ciphersuites_summary">Enabling this option can sometimes help when connecting to legacy servers.</string>
<string name="force_aes_cbc_ciphersuites_title">Force AES-CBC ciphersuites</string>
<string name="forget_creds">Forget Credentials</string>
<string name="forget_creds_cancel">Cancel</string>
<string name="forget_creds_message">Forget saved credential and trust information but retain all profiles and proxies?</string>
<string name="forget_creds_title">Forget Credentials</string>
<string name="forget_creds_yes">Yes</string>
<string name="get_config">OpenVPN: Pulling settings from server</string>
<string name="google_dns_fallback_summary">"Use Google DNS servers as a fallback for connections that route all internet traffic through the VPN tunnel but don't define any VPN DNS servers"</string>
<string name="google_dns_fallback_title">DNS Fallback</string>
<string name="help_menu">Help</string>
<string name="https_client_task_error">HTTPS client task error</string>
<string name="import_autologin_checkbox_text">Import autologin profile</string>
<string name="import_button_text">Import Profile</string>
<string name="import_cancel_button_text">Cancel</string>
<string name="import_help_text">To create a shortcut to this profile or access the profile context menu (for rename, delete, etc.), touch the edit icon on the right. To switch to a different profile, tap the profile name briefly.</string>
<string name="import_help_title">Profile Imported</string>
<string name="import_menu">Import</string>
<string name="import_pkcs12">Import PKCS#12 from SD card</string>
<string name="import_private_tunnel_profile">Import Private Tunnel Profile</string>
<string name="import_profile">Import Profile from SD card</string>
<string name="import_profile_remote">Import Access Server Profile</string>
<string name="import_server_prompt">Access Server Hostname:</string>
<string name="inactive_timeout">OpenVPN Inactivity Disconnect</string>
<string name="info_group_header">Connection info:</string>
<string name="info_msg">OpenVPN: Info</string>
<string name="ipv4_addr">IPv4</string>
<string name="ipv6_addr">IPv6</string>
<string name="ipv6_summary">IPv6 tunnel preference.</string>
<string name="ipv6_title">IPv6</string>
<string name="issued_by">Issued by:</string>
<string name="issued_on">Issued on:</string>
<string name="issued_to">Issued to:</string>
<string name="last_pkt_recv">Packet received</string>
<string name="log_pause">Pause</string>
<string name="log_resume">Resume</string>
<string name="log_title">OpenVPN Log File</string>
<string name="lpr_1_sec_ago">1 second ago</string>
<string name="lpr_gt_1_hour_ago">> 1 hour ago</string>
<string name="lpr_gt_n_min_ago">> %d minutes ago</string>
<string name="lpr_lt_1_sec_ago">&lt; 1 second ago</string>
<string name="lpr_n_sec_ago">%d seconds ago</string>
<string name="more_menu">More...</string>
<string name="need_creds_error">OpenVPN credentials required but none provided</string>
<string name="no_profile_types">No recognized profile types available</string>
<string name="no_profiles_loaded">Welcome to OpenVPN Connect. OpenVPN requires a .ovpn profile to connect to a server. Please go to Menu / Import to import a profile or Menu / Help for more information.</string>
<string name="notification_initial_content">OpenVPN</string>
<string name="ok">OK</string>
<string name="openvpn_ad">VPN Solution for your Business</string>
<string name="openvpn_link">http://openvpn.net/as/</string>
<string name="openvpn_settings">OpenVPN Settings</string>
<string name="org_name">Organization:</string>
<string name="org_unit">Organizational unit:</string>
<string name="password">Password:</string>
<string name="password_save_prompt">Save</string>
<string name="pause">OpenVPN: Pausing (waiting for network)</string>
<string name="pause_vpn_on_blanked_screen_summary">Pause VPN when screen is blanked</string>
<string name="pause_vpn_on_blanked_screen_title">Battery Saver</string>
<string name="pem_password_fail">OpenVPN bad private key password</string>
<string name="pk_password">Private Key Password:</string>
<string name="pk_password_save_prompt">Save</string>
<string name="preferences">Preferences</string>
<string name="privatetunnel_ad">Your Secure and Private Path to the Internet</string>
<string name="privatetunnel_import">https://www.privatetunnel.com/index.php/profiledownload.html</string>
<string name="privatetunnel_link">https://www.privatetunnel.com/</string>
<string name="show_log">Show log file</string>
<string name="show_raw_stats">Show raw stats</string>
<string name="tls_version_min_override_summary">Select the minimum SSL/TLS version for communication with the OpenVPN Server.</string>
<string name="tls_version_min_override_title">Minimum TLS version</string>
<string name="tun_persist_summary">Block internet while VPN is paused or reconnecting (Note: Android versions 4.4 to 4.4.2 have a bug that prevents use of this option)</string>
<string name="tun_persist_title">Seamless Tunnel</string>
<string name="ui_dark_theme_summary">Enable dark theme for the UI (requires app restart)</string>
<string name="ui_dark_theme_title">Use dark theme</string>
<string name="vpn_proto_summary">Select the VPN Protocol</string>
<string name="vpn_proto_title">VPN Protocol</string>
</resources>